--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,17 @@
 body {
-    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/hypnotize.png");
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/cheap_diagonal_fabric.png");
 }
 
 #header {
     display: block;
     top:0px;
-	left:0px;
+    left:0px;
 	width:100%;
 	color:#CCC;
 	background:#fff;
-    padding:10px;
-    border: 5px;
     border-color: #CCC;
     float: right;
+    padding-top: 10px;
 
 }
 
@@ -20,37 +19,70 @@ body {
     background-color: #4aaaa5;
     color: #fff;
     float: left;
-    padding: 5px;
+    margin-left: 280px;
 
 }
 
 #HeaderLinks {
     float: right;
-    color: #777777;
-    text-align: center;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 35px;
+    margin-right: 280px;
+    
+}
 
+#HeaderLinks a {
+    color: #999;
+    text-decoration: none;
+    padding: 5px;
+}
+
+.a1 {
+    border-right-style: solid;
+    border-right-color: #aaa;
+    border-right-width: thin;
+}
+
+.a3 {
+    border-left-style: solid;
+    border-left-color: #aaa;
+    border-left-width: thin;
 }
 
 #bio-image {
     float: left;
-    width: 20%;
-    height: 20%;
-    padding:5px;
+    width: 30%;
+    height: 30%;
+    padding:10px;
+    padding-right: 15px;
 }
 
 .container {
     float: left;
     background-color: #ffffff;
-    width: 650px;
+    width: 610px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 20px;
+    margin-top: 40px;
     
 }
 
 #ConnectWithMe {
     float: right;
     background-color: #ffffff;
-    width: 270px;
+    width: 230px;
     text-align: center;
+    padding: 20px;
+    margin-top: 40px;
 
+}
+
+#ConnectWithMe a {
+    text-decoration: none;
+}
+
+#ConnectWithMe img {
+    padding-top: 10px;
 }
 
 .wrapper {
@@ -61,4 +93,73 @@ body {
 
 h2 {
     color:#4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+#footer {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+	color:#fff;
+	background:#666666;
+    border-top-width: 8px;
+    border-top-style: solid;
+    padding: 5px;
+    border-top-color: #4aaaa5;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    
+}
+
+h1 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 5px;
+}
+
+h3 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 5px;
+    background-color: #4aaaa5;
+    color: #fff;
+}
+
+label, input {
+    display: block;
+    width: 610px;
+}
+
+label, textarea {
+    display: block;
+    width: 610px;
+}
+
+label {
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+#hangman {
+    width: 285px;
+    float: left;
+}
+
+#rpggame {
+    width: 285px;
+    float: right;
+}
+
+#triviagame {
+    width: 285px;
+    float: left;
+}
+
+#rutgersinfowidget {
+    width: 285px;
+    float: right;
+}
+
+#rockpaperscissors {
+    width: 285px;
+    float: left;
 }
