--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,8 @@ body {
 .wrapper {
     width: 960px;
     margin-left: auto;
-    margin-right: auto;  
+    margin-right: auto; 
+    min-height: calc(100vh - 70px); 
 }
 
 h2 {
@@ -99,9 +100,9 @@ h2 {
 
 #footer {
     display: block;
-    position: absolute;
-    bottom: 0;
+    clear: both;
     width: 100%;
+    height: 50px;
     text-align: center;
 	color:#fff;
 	background:#666666;
