--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@ body {
     float: right;
     padding-top: 10px;
 
-
 }
 
 #NameHeader {
@@ -21,14 +20,18 @@ body {
     color: #fff;
     float: left;
     margin-left: 280px;
+    margin-top: 15px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 
 }
 
 #HeaderLinks {
     float: right;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 16px;
+    font-weight: bold;
     padding: 35px;
-    margin-right: 280px;
+    margin-right: 245px;
     
 }
 
@@ -54,7 +57,7 @@ body {
     float: left;
     width: 30%;
     height: 30%;
-    padding:10px;
+    padding:15px;
     padding-right: 15px;
 }
 
@@ -96,19 +99,30 @@ body {
 h2 {
     color:#4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 1.5em;
+    font-weight: bolder;
+    padding: 15px;
+}
+
+#ConnectWithMe h2 {
+    color:#4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 1.25em;
+    font-weight: bolder;
+    padding: 10px;
+   
 }
 
 #footer {
     display: block;
     clear: both;
     width: 100%;
-    height: 50px;
+    height: 70px;
     text-align: center;
 	color:#fff;
 	background:#666666;
     border-top-width: 8px;
     border-top-style: solid;
-    padding: 5px;
     border-top-color: #4aaaa5;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     
@@ -116,14 +130,24 @@ h2 {
 
 h1 {
     font-family: 'Georgia', Times, Times New Roman, serif;
-    padding: 5px;
+    padding: 20px;
+    font-size: 2em;
+    padding-bottom: 30px;
+
 }
 
 h3 {
     font-family: 'Georgia', Times, Times New Roman, serif;
-    padding: 5px;
     background-color: #4aaaa5;
     color: #fff;
+    font-size: 1.5em;
+}
+
+h4 {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 10px;
+    padding-top: 25px;
+    font-size: smaller;
 }
 
 label, input {
@@ -141,27 +165,31 @@ label {
     margin-top: 20px;
 }
 
-#hangman {
-    width: 285px;
-    float: left;
+
+.portfolio_item {
+    width: 265px;
+    position: relative;
+    margin: 20px;
+
 }
 
-#rpggame {
-    width: 285px;
+.float_right {
     float: right;
 }
 
-#triviagame {
-    width: 285px;
+.float_left {
     float: left;
 }
 
-#rutgersinfowidget {
-    width: 285px;
-    float: right;
+.portfolio_item h3 {
+    position: absolute;
+    top: 120px;
+    width: 235px;
+    padding: 15px;
 }
 
-#rockpaperscissors {
-    width: 285px;
-    float: left;
+p {
+   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+   padding: 20px;
+
 }
